Fixed List Positioning
Originally, it was set as outside, so the bullet points were cut off on mobile devices.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -247,6 +247,9 @@ h3 {
     padding: 25px 0 25px 0;
 }
 
+u1 {
+    list-style-position: inside;
+}
 /*
     
     For Responsive Layout on Desktop/Mobile
